# Scaledown_rag

./: .gitignore  README.md  requirements.txt  shared_config.py
RAG_summarization/: main.py  prompt.md  pyproject.toml  requirements.txt
RAG_summarization/src/: config.py
RAG_summarization/src/evaluation/: quality_eval.py  token_tracker.py
RAG_summarization/src/ingest/: pdf_loader.py  text_chunker.py
RAG_summarization/src/rag_pipeline/: summary_rag.py
RAG_summarization/src/retrieval/: embedder.py  retriever.py  vector_store.py
RAG_summarization/src/summarization/: map_summarizer.py  reduce_summarizer.py  summary_pipeline.py
RAG_summarization/summarization/: map_summarizer.py  reduce_summarizer.py  summary_pipeline.py
classic/: main.py  pyproject.toml
classic/data/: question.txt
classic/experiments/: run_experiment_1.py
classic/src/: config.py
classic/src/evaluation/: metrics_logger.py  quality_eval.py
classic/src/ingest/: pdf_loader.py  text_chunker.py
classic/src/rag_pipeline/: classic_rag.py
classic/src/retrieval/: embedder.py
dashboard/: app.py
experiments/: run_all_pipelines.py
logs/: results.csv  summary_metrics.csv
scaledown/: main.py  prompt.md  pyproject.toml
scaledown/src/evaluation/: latency_tracker.py  quality_eval.py
scaledown/src/ingest/: text_chunker.py
scaledown/src/rag_pipeline/: scaledown.py
scaledown_rag/: main.py
scaledown_rag/src/: config.py
scaledown_rag/src/compression/: scaledown_compressor.py
scaledown_rag/src/evaluation/: latency_tracker.py  metrics_logger.py  quality_eval.py  token_tracker.py
(+6 files in other folders)
